Update styles of article header

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>Temoto-kun@Github</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="Random musings">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Open+Sans:300" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Open+Sans:300">
+  <link rel="stylesheet" type="text/css" href="vendor/normalize/normalize.css">
   <link rel="stylesheet" type="text/css" href="prebuilt/components.min.css">
   <link rel="stylesheet" type="text/css" href="prebuilt/dark.min.css">
   <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
@@ -60,6 +61,7 @@
           <hgroup class="titles">
             <div class="generic-container">
               <h1 class="title">{{title}}</h1>
+              <h2 class="subtitle">{{subtitle}}</h2>
             </div>
           </hgroup>
         </div>
