Add header shade

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
     head {
       display: block !important;
+      padding-top: 96px;
+      padding-bottom: 96px;
+      background-color: #1a1a1a;
     }
 
     title {
@@ -28,7 +31,6 @@
       line-height: 1.1;
       text-transform: lowercase;
       text-align: center;
-      margin-top: 96px;
     }
 
     meta[name="description"] {
@@ -40,7 +42,6 @@
       line-height: 1.1;
       text-transform: lowercase;
       text-align: center;
-      margin-bottom: 96px;
     }
 
     meta[name="description"]::after {
