--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Open+Sans:300">
   <link rel="stylesheet" type="text/css" href="vendor/normalize/normalize.css">
   <link rel="stylesheet" type="text/css" href="prebuilt/components.min.css">
-  <link rel="stylesheet" type="text/css" href="prebuilt/dark.min.css">
+  <link rel="stylesheet" type="text/css" href="dark.min.css">
   <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
   <style>
     *, *::before, *::after {
