--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="description" content="Random musings">
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Open+Sans:300">
   <link rel="stylesheet" type="text/css" href="vendor/normalize/normalize.css">
-  <link rel="stylesheet" type="text/css" href="prebuilt/components.min.css">
-  <link rel="stylesheet" type="text/css" href="dark.min.css">
+  <link rel="stylesheet" type="text/css" href="vendor/tesseract/components.min.css">
+  <link rel="stylesheet" type="text/css" href="vendor/tesseract/dark.min.css">
   <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
   <style>
     *, *::before, *::after {
@@ -109,7 +109,7 @@
 <script src="vendor/superagent/superagent.js"></script>
 <script src="vendor/moment/moment.js"></script>
 <script src="vendor/marked/marked.js"></script>
-<script src="prebuilt/script.js"></script>
+<script src="vendor/tesseract/script.js"></script>
 <script src="articles.js"></script>
 </body>
 </html>
